Adds all rest htmls and scss files

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,4 +4,10 @@
 @import './hero';
 @import './benefic';
 @import './solutions';
+@import './business-cases';
+@import './blog';
+@import './team';
+@import './callback';
+@import './footer';
+
 @import './modal';
