Добавляет базовые сбросы, контейнер и цвета

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,5 +1,6 @@
 @import './common';
 @import './example';
+
 @import './header';
 @import './hero';
 @import './benefic';
@@ -9,5 +10,9 @@
 @import './team';
 @import './callback';
 @import './footer';
+
+@import './vars';
+@import './container';
+@import './reset';
 
 @import './modal';
