--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,1 @@
-<header class="header">
-  <p>
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis,
-    aspernatur.
-  </p>
-</header>
+<header class="header"></header>
